tests/bad/simple_return_with_non_void_function.glaz
fn a() i32 { return; }

fn main() {}
